makefile: test was added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 converter_UTF-8/.idea
 converter_UTF-8/CMakeLists.txt
 converter_UTF-8/cmake-build-debug/
+ps/cmake-build-debug/*
+ps/CMakeLists.txt
+ps/.idea
+*.xml
